--- a/data_exploration_and_cleaning.ipynb
+++ b/data_exploration_and_cleaning.ipynb
@@ -11,6 +11,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from support import get_features, plot_learning_curves"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -24,7 +38,7 @@
    ],
    "source": [
     "# import data\n",
-    "data = pd.read_csv('hcp_drug_prediction_data_uncleaned.csv')\n",
+    "data = pd.read_csv('hcp_drug_prediction_data_uncleaned.csv') #?? , sep='\\t'\n",
     "print(data.shape)"
    ]
   },
@@ -293,6 +307,40 @@
    "source": [
     "# output the clean data\n",
     "clean_data.to_csv('hcp_drug_prediction_data_cleaned.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_coef_path(estimator, X, y, alpha, ax=None):\n",
+    "    if ax is None:\n",
+    "        ax = plt.figure().gca()\n",
+    "    coefs = np.zeros((X.shape[1], len(alpha)))\n",
+    "    for (i, a) in enumerate(alpha):\n",
+    "        coefs[:,i] = estimator(alpha=a).fit(X, y).coef_\n",
+    "    ax.plot(alpha, coefs.T)\n",
+    "    ax.set_xlabel(\"Penalty (alpha)\")\n",
+    "    ax.set_ylabel(\"Coefficient value\")\n",
+    "    ax.set_xscale('log')\n",
+    "    \n",
+    "from sklearn.linear_model import Lasso\n",
+    "from sklearn.preprocessing import scale\n",
+    "\n",
+    "facets, age = get_features(data, 'facets', 'AGE', n=1000)\n",
+    "\n",
+    "# Note: we standardize our features to mean-zero and unit-variance,\n",
+    "# because lasso and ridge are sensitive to scale.\n",
+    "facets = scale(facets)\n",
+    "\n",
+    "# Coefficient paths for ridge regression, predicting age from 30 facets\n",
+    "alpha = np.logspace(-3, 1, 100)\n",
+    "plot_coef_path(Lasso, facets, age, alpha)\n",
+    "\n",
+    "plt.title(\"Coefficient paths for lasso regression (n=1,000)\", fontsize=16)\n",
+    "plt.xlim(1e-3, 10);"
    ]
   }
  ],
