--- a/data_exploration_and_cleaning.ipynb
+++ b/data_exploration_and_cleaning.ipynb
@@ -337,6 +337,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 1 = 22-25\n",
+    "# 2 = 26-30\n",
+    "# 3 = 31-35\n",
     "age_recoded = np.where(clean_data['Age']=='22-25', 1, \n",
     "                  np.where(clean_data['Age']=='26-30', 2, \n",
     "                      np.where(clean_data['Age']=='31-35', 3, 4))) "
@@ -348,19 +351,245 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_data = pd.concat([clean_data, pd.DataFrame({'Age_recoded': age_recoded})], axis = 1)\n",
-    "clean_data = clean_data.drop('Age', axis = 1)"
+    "# 0 = Male\n",
+    "# 1 = Female\n",
+    "gender_recoded = np.where(clean_data['Gender'] == 'M', 0, 1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Subject</th>\n",
+       "      <th>PSQI_Score</th>\n",
+       "      <th>PicSeq_AgeAdj</th>\n",
+       "      <th>CardSort_AgeAdj</th>\n",
+       "      <th>Flanker_AgeAdj</th>\n",
+       "      <th>PMAT24_A_CR</th>\n",
+       "      <th>PMAT24_A_SI</th>\n",
+       "      <th>PMAT24_A_RTCR</th>\n",
+       "      <th>ReadEng_AgeAdj</th>\n",
+       "      <th>PicVocab_AgeAdj</th>\n",
+       "      <th>...</th>\n",
+       "      <th>PercStress_Unadj</th>\n",
+       "      <th>SelfEff_Unadj</th>\n",
+       "      <th>NEOFAC_A</th>\n",
+       "      <th>NEOFAC_O</th>\n",
+       "      <th>NEOFAC_C</th>\n",
+       "      <th>NEOFAC_N</th>\n",
+       "      <th>NEOFAC_E</th>\n",
+       "      <th>sub_use</th>\n",
+       "      <th>Age_recoded</th>\n",
+       "      <th>Gender_recoded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100004.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>112.44</td>\n",
+       "      <td>88.64</td>\n",
+       "      <td>111.01</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15590.0</td>\n",
+       "      <td>96.91405</td>\n",
+       "      <td>104.9375</td>\n",
+       "      <td>...</td>\n",
+       "      <td>55.4</td>\n",
+       "      <td>39.6</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100206.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>118.78</td>\n",
+       "      <td>104.94</td>\n",
+       "      <td>116.55</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>18574.5</td>\n",
+       "      <td>103.44410</td>\n",
+       "      <td>117.0361</td>\n",
+       "      <td>...</td>\n",
+       "      <td>57.8</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>100307.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>103.45</td>\n",
+       "      <td>109.92</td>\n",
+       "      <td>101.90</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>11839.0</td>\n",
+       "      <td>98.73000</td>\n",
+       "      <td>96.8100</td>\n",
+       "      <td>...</td>\n",
+       "      <td>57.9</td>\n",
+       "      <td>37.5</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100408.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>125.19</td>\n",
+       "      <td>100.77</td>\n",
+       "      <td>113.51</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>3042.0</td>\n",
+       "      <td>125.64000</td>\n",
+       "      <td>132.6300</td>\n",
+       "      <td>...</td>\n",
+       "      <td>46.8</td>\n",
+       "      <td>56.4</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>100610.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>101.69</td>\n",
+       "      <td>115.18</td>\n",
+       "      <td>114.18</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12280.0</td>\n",
+       "      <td>132.41240</td>\n",
+       "      <td>146.5971</td>\n",
+       "      <td>...</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>53.2</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 75 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Subject  PSQI_Score  PicSeq_AgeAdj  CardSort_AgeAdj  Flanker_AgeAdj  \\\n",
+       "0  100004.0         8.0         112.44            88.64          111.01   \n",
+       "1  100206.0         6.0         118.78           104.94          116.55   \n",
+       "2  100307.0         4.0         103.45           109.92          101.90   \n",
+       "3  100408.0         4.0         125.19           100.77          113.51   \n",
+       "4  100610.0         4.0         101.69           115.18          114.18   \n",
+       "\n",
+       "   PMAT24_A_CR  PMAT24_A_SI  PMAT24_A_RTCR  ReadEng_AgeAdj  PicVocab_AgeAdj  \\\n",
+       "0         19.0          0.0        15590.0        96.91405         104.9375   \n",
+       "1         20.0          0.0        18574.5       103.44410         117.0361   \n",
+       "2         17.0          2.0        11839.0        98.73000          96.8100   \n",
+       "3          7.0         12.0         3042.0       125.64000         132.6300   \n",
+       "4         23.0          0.0        12280.0       132.41240         146.5971   \n",
+       "\n",
+       "   ...  PercStress_Unadj  SelfEff_Unadj  NEOFAC_A  NEOFAC_O  NEOFAC_C  \\\n",
+       "0  ...              55.4           39.6      27.0      15.0      28.0   \n",
+       "1  ...              57.8           44.0      29.0      23.0      26.0   \n",
+       "2  ...              57.9           37.5      37.0      24.0      35.0   \n",
+       "3  ...              46.8           56.4      33.0      29.0      34.0   \n",
+       "4  ...              37.8           53.2      31.0      33.0      36.0   \n",
+       "\n",
+       "   NEOFAC_N  NEOFAC_E  sub_use  Age_recoded  Gender_recoded  \n",
+       "0      24.0      25.0      0.0          1.0             0.0  \n",
+       "1      21.0      32.0      0.0          2.0             0.0  \n",
+       "2      15.0      37.0      0.0          2.0             1.0  \n",
+       "3      15.0      33.0      1.0          3.0             0.0  \n",
+       "4       7.0      15.0      0.0          2.0             0.0  \n",
+       "\n",
+       "[5 rows x 75 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_data = pd.concat([clean_data, pd.DataFrame({'Age_recoded': age_recoded, 'Gender_recoded': gender_recoded})], axis = 1)\n",
+    "clean_data = clean_data.drop(['Age', 'Gender'], axis = 1)\n",
+    "clean_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# output the clean data\n",
     "clean_data.to_csv('hcp_drug_prediction_data_cleaned.csv', index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
