Categorized recoded variables

--- a/data_exploration_and_cleaning.ipynb
+++ b/data_exploration_and_cleaning.ipynb
@@ -316,14 +316,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(1169,)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1169,)\n"
+     ]
     }
    ],
    "source": [
@@ -333,7 +330,7 @@
     "age_recoded = np.where(clean_data['Age']=='22-25', 1, \n",
     "                  np.where(clean_data['Age']=='26-30', 2, \n",
     "                      np.where(clean_data['Age']=='31-35', 3, 4))) \n",
-    "age_recoded.shape"
+    "print(age_recoded.shape)"
    ]
   },
   {
@@ -372,34 +369,60 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1169, 75)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "clean_data = pd.concat([clean_data, pd.DataFrame({'Age_recoded': age_recoded, 'Gender_recoded': gender_recoded})], axis = 1)\n",
-    "clean_data = clean_data.drop(['Age', 'Gender'], axis = 1)\n",
-    "clean_data.head()\n",
-    "clean_data.shape"
+    "clean_data = clean_data.drop(['Age', 'Gender'], axis = 1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subject               int64\n",
+      "PSQI_Score            int64\n",
+      "PicSeq_AgeAdj       float64\n",
+      "CardSort_AgeAdj     float64\n",
+      "Flanker_AgeAdj      float64\n",
+      "                     ...   \n",
+      "NEOFAC_N            float64\n",
+      "NEOFAC_E            float64\n",
+      "sub_use               int64\n",
+      "Age_recoded        category\n",
+      "Gender_recoded     category\n",
+      "Length: 75, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "clean_data.head()\n",
+    "clean_data.shape\n",
+    "clean_data['Age_recoded'] = clean_data['Age_recoded'].astype('category')\n",
+    "clean_data['Gender_recoded'] = clean_data['Gender_recoded'].astype('category')\n",
+    "print(clean_data.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# output the clean data\n",
     "clean_data.to_csv('hcp_drug_prediction_data_cleaned.csv', index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
