--- a/data_exploration_and_cleaning.ipynb
+++ b/data_exploration_and_cleaning.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -409,12 +409,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# output the clean data\n",
-    "clean_data.to_csv('hcp_drug_prediction_data_cleaned.csv', index = False)"
+    "clean_data.to_csv('hcp_drug_prediction_data_cleaned.csv')"
    ]
   },
   {
