--- a/data_exploration_and_cleaning.ipynb
+++ b/data_exploration_and_cleaning.ipynb
@@ -377,44 +377,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subject               int64\n",
-      "PSQI_Score            int64\n",
-      "PicSeq_AgeAdj       float64\n",
-      "CardSort_AgeAdj     float64\n",
-      "Flanker_AgeAdj      float64\n",
-      "                     ...   \n",
-      "NEOFAC_N            float64\n",
-      "NEOFAC_E            float64\n",
-      "sub_use               int64\n",
-      "Age_recoded        category\n",
-      "Gender_recoded     category\n",
-      "Length: 75, dtype: object\n"
+      "   Subject  PSQI_Score  PicSeq_AgeAdj  CardSort_AgeAdj  Flanker_AgeAdj  \\\n",
+      "0   100004           8         112.44            88.64          111.01   \n",
+      "1   100206           6         118.78           104.94          116.55   \n",
+      "2   100307           4         103.45           109.92          101.90   \n",
+      "3   100408           4         125.19           100.77          113.51   \n",
+      "4   100610           4         101.69           115.18          114.18   \n",
+      "\n",
+      "   PMAT24_A_CR  PMAT24_A_SI  PMAT24_A_RTCR  ReadEng_AgeAdj  PicVocab_AgeAdj  \\\n",
+      "0         19.0          0.0        15590.0        96.91405         104.9375   \n",
+      "1         20.0          0.0        18574.5       103.44410         117.0361   \n",
+      "2         17.0          2.0        11839.0        98.73000          96.8100   \n",
+      "3          7.0         12.0         3042.0       125.64000         132.6300   \n",
+      "4         23.0          0.0        12280.0       132.41240         146.5971   \n",
+      "\n",
+      "   ...  PercStress_Unadj  SelfEff_Unadj  NEOFAC_A  NEOFAC_O  NEOFAC_C  \\\n",
+      "0  ...              55.4           39.6      27.0      15.0      28.0   \n",
+      "1  ...              57.8           44.0      29.0      23.0      26.0   \n",
+      "2  ...              57.9           37.5      37.0      24.0      35.0   \n",
+      "3  ...              46.8           56.4      33.0      29.0      34.0   \n",
+      "4  ...              37.8           53.2      31.0      33.0      36.0   \n",
+      "\n",
+      "   NEOFAC_N  NEOFAC_E  sub_use  Age_recoded  Gender_recoded  \n",
+      "0      24.0      25.0        0            1               0  \n",
+      "1      21.0      32.0        0            2               0  \n",
+      "2      15.0      37.0        0            2               1  \n",
+      "3      15.0      33.0        1            3               0  \n",
+      "4       7.0      15.0        0            2               0  \n",
+      "\n",
+      "[5 rows x 75 columns]\n",
+      "(1169, 75)\n"
      ]
     }
    ],
    "source": [
-    "clean_data.head()\n",
-    "clean_data.shape\n",
-    "clean_data['Age_recoded'] = clean_data['Age_recoded'].astype('category')\n",
-    "clean_data['Gender_recoded'] = clean_data['Gender_recoded'].astype('category')\n",
-    "print(clean_data.dtypes)"
+    "print(clean_data.head())\n",
+    "print(clean_data.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# output the clean data\n",
-    "clean_data.to_csv('hcp_drug_prediction_data_cleaned.csv')"
+    "clean_data.to_csv('hcp_drug_prediction_data_cleaned.csv', index = False)"
    ]
   },
   {
