--- a/data_exploration_and_cleaning_lassoReg.ipynb
+++ b/data_exploration_and_cleaning_lassoReg.ipynb
@@ -73,9 +73,11 @@
     "    ax.set_xscale('log')\n",
     "\n",
     "#facets, age = get_features(data, 'facets', 'AGE', n=1000)\n",
-    "gender, age = get_features(data, 'Gender', 'Age_recoded')\n",
-    "del data['Gender']\n",
+    "gender, age, sub_use = get_features(data, 'Gender', 'Age_recoded', 'sub_use')\n",
+    "del data['Gender_recoded']\n",
     "del data['Age_recoded']\n",
+    "del data['sub_use']\n",
+    "\n",
     "\n",
     "# Note: we standardize our features to mean-zero and unit-variance,\n",
     "# because lasso and ridge are sensitive to scale.\n",
@@ -87,7 +89,7 @@
     "#plot_coef_path(Lasso, facets, age, alpha)\n",
     "plot_coef_path(Lasso, data, alpha)\n",
     "\n",
-    "plt.title(\"Coefficient paths for lasso regression (n=1,000)\", fontsize=16)\n",
+    "plt.title(\"Coefficient paths for lasso regression\", fontsize=16)\n",
     "plt.xlim(1e-3, 10);"
    ]
   },
