--- a/RFECV_test.ipynb
+++ b/RFECV_test.ipynb
@@ -2144,47 +2144,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(array([ 0,  1,  2,  3,  4,  5,  7,  8,  9, 10, 11, 12, 13, 14, 16, 18, 21,\n",
-      "       24, 26, 31, 32, 34, 36, 37, 38, 39, 40, 43, 44, 46, 49, 51, 52, 53,\n",
-      "       55, 56, 57, 59, 62, 64, 65, 67, 68, 69, 70, 71, 72]),)\n"
+      "[[ 0  1  2  3  4  5  7  8  9 10 11 12 13 14 16 18 21 24 26 31 32 34 36 37\n",
+      "  38 39 40 43 44 46 49 51 52 53 55 56 57 59 62 64 65 67 68 69 70 71 72]]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Index(['PSQI_Score', 'PicSeq_AgeAdj', 'CardSort_AgeAdj', 'Flanker_AgeAdj',\n",
+       "       'PMAT24_A_CR', 'PMAT24_A_SI', 'ReadEng_AgeAdj', 'PicVocab_AgeAdj',\n",
+       "       'ProcSpeed_AgeAdj', 'DDisc_SV_1mo_200', 'DDisc_SV_6mo_200',\n",
+       "       'DDisc_SV_1yr_200', 'DDisc_SV_3yr_200', 'DDisc_SV_5yr_200',\n",
+       "       'DDisc_SV_1mo_40K', 'DDisc_SV_1yr_40K', 'DDisc_SV_10yr_40K',\n",
+       "       'VSPLOT_TC', 'VSPLOT_OFF', 'SCPT_TPRT', 'SCPT_SEN', 'SCPT_LRNR',\n",
+       "       'IWRD_RTC', 'ListSort_AgeAdj', 'CogFluidComp_AgeAdj',\n",
+       "       'CogEarlyComp_AgeAdj', 'CogTotalComp_AgeAdj', 'ER40_CRT', 'ER40ANG',\n",
+       "       'ER40HAP', 'AngAffect_Unadj', 'AngAggr_Unadj', 'FearAffect_Unadj',\n",
+       "       'FearSomat_Unadj', 'LifeSatisf_Unadj', 'MeanPurp_Unadj',\n",
+       "       'PosAffect_Unadj', 'Loneliness_Unadj', 'EmotSupp_Unadj',\n",
+       "       'PercStress_Unadj', 'SelfEff_Unadj', 'NEOFAC_O', 'NEOFAC_C', 'NEOFAC_N',\n",
+       "       'NEOFAC_E', 'Age_recoded', 'Gender_recoded'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "np.array(np.where(rfecv.ranking_==1)).size\n",
     "\n",
-    "opt_ft = np.where(rfecv.ranking_==1)\n",
+    "opt_ft = np.asarray(np.where(rfecv.ranking_==1))\n",
     "\n",
     "print(opt_ft)\n",
     "\n",
-    "#X.iloc[:,opt_ft]"
+    "opt_feat = [0,1,2,3,4,5,7,8,9,10,11,12,13,14,16,18,21,24,26,31,32,34,36,37,38,39,40,43,44,46,49,51,52,53,55,56,57,59,62,64,65,67,68,69,70,71,72]\n",
+    "\n",
+    "X.iloc[:,opt_feat].columns\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'yellowbrick'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-89-f5323403d2d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0myellowbrick\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclassifier\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mClassificationReport\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mrfecv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpoof\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'yellowbrick'"
-     ]
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
